# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml  python.yml
gendiff/: __init__.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: core.py  gendiff.py
hexlet_code/: __init__.py  diff_builder.py
hexlet_code/formatters/: stylish.py
hexlet_code/scripts/: gendiff.py
tests/: test_gendiff.py  test_json_diff.py  test_nested_diff.py  test_plain_diff.py
tests/test_data/: expected_result.txt  expected_result_json.txt  expected_result_stylish.txt
