[project]
author = [
    {name = "Ivan Foksha", email = "v.foksh6@gmail.com"}
]
name = "hexlet-code"
version = "0.1.0"
description = "A tool to computer differences between files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
