[project]
authors = [
    {name = "Ivan Foksha", email = "v.foksh6@gmail.com"}
]
name = "gendiff"
version = "0.1.0"
description = "A tool to compute differences between files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.ruff]
select = ["E", "F", "I001", "C90"]
ignore = ["C901"]
